# OPL3BankEditor

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FMBankEdit.pro  README.md  appveyor-win9x.yml  appveyor.yml  audio.cpp  bank.cpp  bank.h  bank_editor.cpp  bank_editor.h  bank_editor.ui  build.bat  changelog.txt  common.cpp  common.h  controlls.cpp  formats_info.htm  ins_names.cpp  ins_names.h  main.cpp  piano.cpp  piano.h  version.h
.devcontainer/: Dockerfile
.github/workflows/: macos-ci.yml  ubuntu-ci.yml  windows-ci.yml
Bank_Examples/: 2x2.op3  DRUMOPL.IBK  DRUMOPL.tmb  Earthsieg.wopl  FingerBass.sbi  Hammond.sbi  Info.txt  LOFIPIAN.A2I  Mobilnik-v2.wopl  Mobilnik.wopl  Piano.4op  StellDrums.sbi  cyberpuck.tmb  d3dtimbr-modded.wopl  d3dtimbr.op2  drums.o3  drums.sb  earthsieg.ad  example.wopl  fat-drums.o3  fat-drums.sb  fat-melodic.o3  fat-melodic.sb  fat2.op3  glockenspielprealpha.opli  gmopl-3.ibk  rock-organ-1.opli  rock-organ-doom.opli  sbvoice.doc  synth.pat  test-2.wopl  test.wopl  tim.tim  tumubar-bell-dmx.sbi
Bank_Examples/AdlibTracker2/: $at2demo.a2w  $mlfbank.bnk  $mt32.ibk  3klang1.sgi  3klang2.sgi  aalto.sbi  accordn.sbi  acid.cif  acidbas4.sgi  acidbass.sgi  alien.cif  alien.sbi  alien2.sbi  altovio2.sbi  altoviol.sbi  asbass.fin  astring.sbi  atari.sgi  bagpipe1.sbi  bagpipe2.sbi  banjo.sbi  banjo1.sbi  basdr3.sbi  base.cif  base.sgi  base2.cif  base3.cif  base3.sgi  basedrum.sgi  basemax.sgi  basemed.sgi  basesyn.cif  bass.fin  bass.ins  bass1.sbi  bass2.cif  bass2.ins  bass2.sbi  bass295.fin  bass3.cif  (+444 more)
Bank_Examples/Reality AdLib tracker/: cybernet.ins  midi.ins  pulsebass.ins
Bank_Examples/Sci/: pq2.bnk  pq2.pat  sci.patch.format.txt  sq4.bnk  sq4.pat
FileFormats/: dmxopl2.cpp  dmxopl2.h  junlevizion.cpp  junlevizion.h
Specifications/: AILBANK.TXT  DMX OP2 Bank Format.txt  HMI BNK Format.txt  Opl3Bank.fbs  RIFF FM4 PAT specification.txt  Reality ADlib Tracker format.cp437.txt.utf-8.txt  TMB Format.txt  UNIX SoundBlaster Patch.txt  WOPL-and-OPLI-Specification.odt  WOPL-and-OPLI-Specification.txt  WOPLX-Specification.txt
_AudioOutputQtExample/: audiooutput.cpp  audiooutput.h  audiooutput.pro
_Misc/: bisqwit-2.adlraw  bnk2.bnk  bytecmp_adlraw.c  bytecmp_bnk.c  bytecmp_dmx.c  bytecmp_ibk.c  bytecmp_ibk2.c  bytecmp_ibk3.c  bytecmp_op3.c  bytecmp_silly.c  bytecmp_tim.c  bytecmp_tmb.c  compare_banks.sh  dumb_bnk.c  grassman.txt  grassman2.txt  ibk2.ibk  lostvik1.ad  lostvik2.opl  sbnk1.bnk  sbnk2.bnk  std-2.o3  std-2.sb  std.o3  std.sb  tim.snd
_Misc/qt-4-4-3-build/: Readme.txt  make-qt-4-4-3.bat
cmake/: FindQwt.cmake  deploy.cmake  library_qt.cmake  static_qt.cmake
config.tests/cpp14/: .gitignore  cpp14_test.cpp  cpp14_test.pro
opl/: generator.cpp  generator.h
opl_proxy/: Readme.txt  liboplproxy.tgt  liboplproxy_exports.txt  oplproxy.c  oplproxy.wpj
opl_proxy/dummy-non-windows/: oplproxy.c
opl_proxy/modern/: .gitignore  InpOut32Helper.c  InpOut32Helper.h  Readme.txt  build32.bat  build32.sh  build64.bat  build64.sh  liboplproxy.def  liboplproxy_exports.txt  oplproxy.c  update_exports.bat
opl_proxy/win9x/: liboplproxy.tgt  liboplproxy_exports.txt  oplproxy.c  oplproxy.wpj  update_exports.sh
resources/: resources.qrc
src/: audio.cpp  audio_config.cpp  audio_config.h  audio_config.ui  bank.cpp  bank.h  bank_comparison.cpp  bank_comparison.h  bank_comparison.ui  bank_editor.cpp  bank_editor.h  bank_editor.ui  bank_type_dlg.cpp  bank_type_dlg.h  common.cpp  common.h  controlls.cpp  delay_analysis.cpp  delay_analysis.h  delay_analysis.ui  formats_sup.cpp  formats_sup.h  formats_sup.ui  hardware.cpp  hardware.h  hardware.ui  importer.cpp  importer.h  importer.ui  ins_names.cpp  ins_names.h  ins_names_data.h  latency.cpp  latency.h  main.cpp  main.h  metaparameter.h  operator_editor.cpp  operator_editor.h  operator_editor.ui  (+5 more)
src/FileFormats/: Opl3Bank_generated.h  adlibbnk.cpp  adlibbnk.h  apogeetmb.cpp  apogeetmb.h  betmb.cpp  betmb.h  dmxopl2.cpp  dmxopl2.h  ffmt_base.cpp  ffmt_base.h  ffmt_enums.cpp  ffmt_enums.h  ffmt_factory.cpp  ffmt_factory.h  format_adlib_bnk.cpp  format_adlib_bnk.h  format_adlib_tim.cpp  format_adlib_tim.h  format_adlib_tracker.cpp  format_adlib_tracker.h  format_adlibbnk.cpp  format_adlibbnk.h  format_adlibgold_bnk2.cpp  format_adlibgold_bnk2.h  format_ail2_gtl.cpp  format_ail2_gtl.h  format_apogeetmb.cpp  format_apogeetmb.h  format_bisqwit.cpp  format_bisqwit.h  format_cmf_importer.cpp  format_cmf_importer.h  format_dmxopl2.cpp  format_dmxopl2.h  format_dro_importer.cpp  format_dro_importer.h  format_ea_importer.cpp  format_ea_importer.h  format_flatbuffer_opl3.cpp  (+39 more)
src/FileFormats/at_misc/: adt2pack.hpp
src/FileFormats/wopl/: wopl_file.c  wopl_file.h
src/audio/: ao_alsa.cpp  ao_alsa.h  ao_alsa.pri  ao_base.cpp  ao_base.h  ao_qtmm.cpp  ao_qtmm.h  ao_qtmm.pri  ao_rtaudio.cpp  ao_rtaudio.h  ao_rtaudio.pri
src/audio/for-mingw-9x/: dsound.h
src/midi/: midi_rtmidi.cpp  midi_rtmidi.h  midi_rtmidi.pri
src/opl/: generator.cpp  generator.h  generator_realtime.cpp  generator_realtime.h  measurer.cpp  measurer.h  nukedopl3.c
src/opl/chips/: chipset.cmake  chipset.pri  dosbox_opl3.cpp  dosbox_opl3.h  java_opl3.cpp  java_opl3.h  nuked_opl3.cpp  nuked_opl3.h  nuked_opl3_v174.cpp  nuked_opl3_v174.h  opal_opl3.cpp  opal_opl3.h  opl_chip_base.h  opl_serial_misc.h  opl_serial_port.cpp  opl_serial_port.h  opl_serial_port.pri  opl_serial_port_qt.cpp  opl_serial_port_qt.h  win9x_opl_proxy.cpp  win9x_opl_proxy.h  (+5 more)
src/resources/: file_adbnk.icns  file_adins.icns  file_dmx.icns  file_fm4.icns  file_hmi.icns  file_ibk.icns  file_jv.icns  file_miles.icns  file_opli.icns  file_sbi.icns  file_tmb.icns  file_wopl.icns  info.plist.in  make_icns.sh  opl3.icns  opl3_bank_editor.desktop  res.rc  resources.qrc
src/translations/: fr_FR.qm  fr_FR.ts  opl3bankeditor_fr_FR.ts  opl3bankeditor_pl_PL.ts  opl3bankeditor_ru_RU.ts  translations.qrc
test/: build_deb.sh
test/wopl_rw/: test_data.qrc  tst_wopl_rwtest.cpp  wopl_rw.pro
utils/: ftp-upload.sh
utils/measurer/: measurer-tool.cpp  measurer.cpp
(+74 files in other folders)
